[gd_scene load_steps=5 format=3 uid="uid://p8ebm0dhtcdt"]

[ext_resource type="Script" path="res://Drawing.gd" id="1_brsgd"]
[ext_resource type="Texture2D" uid="uid://btufevun4oa81" path="res://bg.png" id="2_srg1j"]
[ext_resource type="Texture2D" uid="uid://kj4an6wqe1ey" path="res://card_back.png" id="3_55aub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4afmf"]
size = Vector2(1130, 794)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_brsgd")

[node name="BG" type="TextureRect" parent="."]
z_index = -1
offset_right = 1280.0
offset_bottom = 960.0
mouse_filter = 2
texture = ExtResource("2_srg1j")

[node name="Area2D" type="Area2D" parent="BG"]
position = Vector2(640, 480)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Area2D"]
visible = false
shape = SubResource("RectangleShape2D_4afmf")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(676, 207)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="deck" type="TextureButton" parent="."]
offset_left = 582.0
offset_top = 72.0
offset_right = 694.0
offset_bottom = 250.0
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_55aub")
ignore_texture_size = true
stretch_mode = 4

[node name="Shuffler" type="Button" parent="."]
offset_left = 1081.0
offset_top = 69.0
offset_right = 1209.0
offset_bottom = 197.0
text = "SHUFFLE"

[node name="ReturnButton" type="Button" parent="."]
offset_left = 71.0
offset_top = 74.0
offset_right = 245.0
offset_bottom = 191.0
text = "RETURN TO TITLE"

[node name="Label" type="Label" parent="ReturnButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label2" type="Label" parent="ReturnButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_constants/outline_size = 7

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 118.0
offset_top = -406.0
offset_right = 400.0
offset_bottom = -174.0
grow_horizontal = 0
pivot_offset = Vector2(141, 0)

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="deck" to="." method="_on_deck_pressed"]
[connection signal="pressed" from="Shuffler" to="." method="_on_shuffler_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
